add: add several tools

--- a/bucket/templates/java-program.json.template
+++ b/bucket/templates/java-program.json.template
@@ -10,43 +10,11 @@
         ]
     },
     "checkver": "github",
-    "architecture": {
-        "64bit": {
-            "url": "",
-            "hash": ""
-        },
-        "32bit": {
-            "url": "",
-            "hash": ""
-        },
-        "arm64": {
-            "url": "",
-            "hash": ""
-        }
-    },
-    "pre_install": [
-        "$content = (Get-Content -Path $(Join-Path $(Find-BucketDirectory -Root -Name ctftools) starters/app.cmd)) -replace '%%HOME%%', $dir",
-        "Set-Content -Path $(Join-Path $dir app.cmd) -Value $content -Encoding UTF8"
-    ],
+    "url": "",
+    "hash": "",
     "autoupdate": {
-        "architecture": {
-            "64bit": {
-                "url": ""
-            },
-            "32bit": {
-                "url": ""
-            },
-            "arm64": {
-                "url": ""
-            }
-        }
+        "url": ""
     },
     "persist": "",
-    "bin": "app.cmd",
-    "shortcuts": [
-        [
-            "app.cmd",
-            "App"
-        ]
-    ]
+    "bin": "app.jar"
 }
