--- a/bucket/templates/raw-program-no-architecture.json.template
+++ b/bucket/templates/raw-program-no-architecture.json.template
@@ -1,16 +1,20 @@
 {
     "version": "",
+    "license": "",
     "description": "",
     "homepage": "",
-    "license": "",
     "checkver": "github",
-    "suggest": {
-        "python": "python"
-    },
     "url": "",
     "hash": "",
     "autoupdate": {
         "url": ""
     },
-    "bin": "app.py"
+    "persist": "",
+    "bin": "app",
+    "shortcuts": [
+        [
+            "app",
+            "App"
+        ]
+    ]
 }
