--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,15 +23,11 @@ jobs:
         with:
           repository: ScoopInstaller/Scoop
           path: scoop_core
-      - name: Init Test Suite
-        uses: potatoqualitee/psmodulecache@v6.2
-        with:
-          modules-to-cache: BuildHelpers
-          shell: powershell
-      - name: Test Bucket
+      - name: Init and Test
         shell: powershell
         run: |
           $env:SCOOP_HOME="$(Convert-Path '.\scoop_core')"
+          .\scoop_core\test\bin\init.ps1
           .\my_bucket\bin\test.ps1
   test_pwsh:
     name: PowerShell
@@ -47,13 +43,9 @@ jobs:
         with:
           repository: ScoopInstaller/Scoop
           path: scoop_core
-      - name: Init Test Suite
-        uses: potatoqualitee/psmodulecache@v6.2
-        with:
-          modules-to-cache: BuildHelpers
-          shell: pwsh
-      - name: Test Bucket
+      - name: Init and Test
         shell: pwsh
         run: |
           $env:SCOOP_HOME="$(Convert-Path '.\scoop_core')"
+          .\scoop_core\test\bin\init.ps1
           .\my_bucket\bin\test.ps1
